# fast-api-ci-cd

./: .coveragerc  .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  STANDARDS.md  TESTING.md  alembic.ini  commitlint.config.js  docker-compose.test.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml  lint.yml  release.yml  setup-python.yml  tag-validation.yml  test.yml
app/: __init__.py  main.py
app/api/v1/: qr_code.py
app/core/: config.py  database.py  security.py
app/middleware/: rate_limiter.py
app/models/: base.py  user.py
app/routers/: qr_code_router.py  user_router.py
app/schemas/: __init__.py  qr_code_schemas.py  user_schema.py
app/services/: qr_code_service.py  user_service.py
app/utils/: db.py  dependencies.py  jwt.py  logging_config.py
migrations/: env.py
migrations/versions/: 2e07b46d1878_create_users_table.py
tests/: conftest.py  test_auth.py  test_main.py  test_qr_code.py  test_user_registration.py
