[tool.poetry]
name = "qr-code-generator"
version = "1.0.6"
description = "A robust and scalable QR Code Generator application built with FastAPI"
authors = ["Jay Singh <singhjay@live.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
qrcode = "^7.4.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.1.0"
coverage = "^7.4.0"
python-semantic-release = "^9.15.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# New-style config for python-semantic-release 9.x
[tool.python_semantic_release]
version_variable = ["app/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_source = ["tag", "commit"]
commit_version_number = true
upload_to_repository = false
build_command = "poetry build"
changelog_file = "CHANGELOG.md"
commit_parser = "conventional_commits"
major_on_zero = false
tag_format = "v{version}"
tag_type = "annotated"
allow_zero_version = true
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
commit_message = "chore(release): {version} [skip ci]"

[tool.python_semantic_release.remote]
token = "env:GH_TOKEN"
# Add these if you want to sign releases
sign_tags = true
provider = "github"

# Simplified branch configuration - only main branch
[tool.python_semantic_release.branches]
main = [
    { name = "main" }
]
development = [
    { name = "fix/.*" },
    { name = "feature/.*" },
    { name = "develop" }
]

[tool.python_semantic_release.changelog]
sections = [
    "feature",
    "fix",
    "breaking",
    "documentation",
    "performance",
    "refactor"
]
components = [
    "semantic_release.changelog.changelog_headers",
    "semantic_release.changelog.compare_url",
    "semantic_release.changelog.commit_list"
]
include_prereleases = true
exclude_commit_patterns = []
render_title = true
render_commit_links = true
include_unreleased = true
unreleased_section_title = "Unreleased"
always_update = true
